--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
+
 <body>
-    
+    <section>
+        <div class="bg-image">
+            <nav class="navbar">
+                <div class="container">
+                    <a href="#" class="logo">
+                        <img src="./assets/images/flower.png" alt="Implenia Logo">
+                    </a>
+                    <button class="menu-toggle" id="mobile-menu">
+                        ☰
+                    </button>
+                    <ul class="nav-links">
+                        <li><a href="#" class="active">Home</a></li>
+                        <li><a href="#">Stories</a></li>
+                        <li><a href="#">Community</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="container">
+                <div class="box">
+                    <div class="overlay">
+                        <p>Shape the future of Implenia!</p>
+                        <h1 class="heading">WE ARE LOOKING FOR YOUR IDEA</h1>
+                        <a href="#" class="cta-button">Bring your idea to life!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
