--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
 
@@ -38,6 +39,48 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="idea">
+        <div class="kick-box">
+            <h2>IMPLENIA KICKBOX</h2>
+            <p class="paragraph">Since 2019, our Kickbox Intrapreneurship Program has been inspiring employees across
+                all divisions to turn their ideas into impactful solutions. From validating ideas (RedBox) to piloting
+                projects (BlueBox) and driving implementation (GoldBox), Kickbox provides the tools and support to shape
+                the future of Implenia. Become an intrapreneur yourself and bring your idea to life!</p>
+
+            <div class="stats">
+                <div class="stat">
+                    <span>+155</span>
+                    <p>Ideas submitted</p>
+                </div>
+                <div class="stat">
+                    <span>+325</span>
+                    <p>Active Platform users</p>
+                </div>
+                <div class="stat">
+                    <span>+250</span>
+                    <p>Community Members</p>
+                </div>
+            </div>
+
+            <div class="button-container">
+                <button class="submit-button">Submit your idea!</button>
+            </div>
+        </div>
+    </section>
+    <section class="video">
+        <h3 class="video-heading">HOW IT WORKS</h3>
+        <div class="video-container">
+            <div class="info-box">
+                VIDEO CAN BE EXCHANGED FOR CAMPAIGNS.<br>
+                - <b>Title:</b> Name of Campaign<br>
+                - <b>Button:</b> Join the campaign!
+            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ajdRvxDWH4w?si=USywiJe8cXfNGXQD"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 </body>
